{
    "name": "InputControlMap",
    "maps": [
        {
            "name": "TreeScene",
            "id": "8f8da3ac-774e-4a88-ba5b-729df90f816a",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "c490dc66-cc12-4ba8-b521-28642b095b8c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseButton",
                    "type": "Value",
                    "id": "d15e1a54-fda0-4b3d-a896-f4fd7ed1698c",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "23ae7bf4-73d7-4ccb-881d-5022af865fa7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fedd11db-b1e3-4078-961f-60d1b0320ad5",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "MOBILE",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee29b4da-d946-4632-87e9-d3758e3a07f4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "PC",
                    "action": "MouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c847975b-68db-4469-a70b-b777d9401495",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MOBILE",
                    "action": "MouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "MOBILE",
            "bindingGroup": "MOBILE",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}